--- a/_posts/武侯祠.md
+++ b/_posts/武侯祠.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      定时器 你真的会使用吗？
+subtitle:   iOS定时器详解
+date:       2016-12-13
+author:     BY
+header-img: img/post-bg-ios9-web.jpg
+catalog: 	 true
+tags:
+    - iOS
+    - 定时器
+---
 - 丞相祠堂何处寻，锦官城外柏森森。
   在我去武侯祠之前，只知武侯祠，去了之后，才知那里原是刘备的惠陵。
   “忠君”的思想禁锢是维系数千年封建统治的基础，所谓僭越，足以让统治者杀死1个人，再继续摸黑诋毁，直到这个人彻底失去民众的支持。然而，在这样的封建时代，民众却让丞相占据了先主的主场，“僭越”千年之久，他的事迹不被篡改，他的功劳不被抹消，民众祭祀他，不为祈求，只为传颂和纪念。
