--- a/_posts/2024-12-08-海淘.md
+++ b/_posts/2024-12-08-海淘.md
@@ -1,17 +1,14 @@
 ---
 layout:     post
-title:      海淘技巧
-subtitle:   海淘1
-date:       2024-12-18
-author:     flitlr
-header-img: img/post-bg-re-vs-ng2.jpg
+title:      ARC 与 MRC 混合使用
+subtitle:   MRC 库的处理
+date:       2024-12-08
+author:     BY
+header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - 海淘
-    - 效率
-    - 开发技巧
+    - iOS
 ---
-
 - 直奔主题，如果喜欢上了手卷，给新入坑的烟友一点小建议：新人套餐：
        卷烟器：RAW70mm黄色和黑色均可，黑色为直径8mm、6mm可调（小窍门：黄黑各买一个，把黄色卷布装黑色可调的基座上更好用）；
        卷烟纸：常规虎纸、舞女，可以了，不用选太多种，其他的以后慢慢去尝试，这两种适用所有烟丝；
