更新 2024-12-08-海淘.md

--- a/_posts/2024-12-08-海淘.md
+++ b/_posts/2024-12-08-海淘.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      ARC 与 MRC 混合使用
-subtitle:   MRC 库的处理
+title:      海淘使用技巧
+subtitle:   海淘1
 date:       2024-12-08
-author:     BY
+author:     flitlr
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - iOS
+    - 海淘
 ---
 - 直奔主题，如果喜欢上了手卷，给新入坑的烟友一点小建议：新人套餐：
        卷烟器：RAW70mm黄色和黑色均可，黑色为直径8mm、6mm可调（小窍门：黄黑各买一个，把黄色卷布装黑色可调的基座上更好用）；
